Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14304

Project explorer doesn't remember its state properly

XMLWordPrintable

      1) open a project which files in multiple directories (i.e. its h, cpp, forms, whatever files are not stored in a single directory, but rather in multiple directories), and let's call these directories D1 ... Dn
      2) make the project explorer visible in the sidebar
      3) open the directory D1 in the "headers" folder in the project tree (the h files in D1 become listed in the tree), then open D1 also in the "sources" folder (the cpp files in D1 become listed in the tree)
      4) close and then reopen creator
      Result: the "header" part of the project tree remembered the state of the tree (i.e. which folders were open and which were closed), while the "sources" part didn't (all folders in "sources") are closed.

      In fact, what happens is that the sidebar project tree remembers only the state of the first folder in the tree when closing and then reopening creator, while all the remaining folders ("sources", "forms", "other", etc) forget their state.
      The above also holds for multi-project sessions, i.e. only the first folder of the first project in the project tree retains its state, while all the remaining folders lose their state after close/reopen creator.

        For Gerrit Dashboard: QTCREATORBUG-14304
        # Subject Branch Project Status CR V

            dt Daniel Teske
            gyll Gyll
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes